# epub-translate

./: .gitignore  README.md  pyproject.toml  requirements.txt
epub_translate/: cli.py  config.py  patched_ebooklib.py  settings.py  translator.py  utils.py
tests/: epub_read.py
