# uv 配置（保留用于 uv 用户）
[project]
name = "epub-translate"
version = "0.0.1"
description = "Simple cli tool for translating ebooks in EPUB format into any language."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SpaceShaman", email = "spaceshaman@tuta.io"}]
requires-python = ">=3.8.5,<4.0.0"
dependencies = [
    "ebooklib>=0.19,<0.20",
    "openai>=1.82.0,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "typer>=0.16.0,<0.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11,<0.12.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
]

[project.scripts]
epub-translate = "epub_translate.cli:app"

# 下面是原有的 Poetry 配置（保留用于 Poetry 用户）
[tool.poetry]
name = "epub-translate"
version = "0.0.1"
description = "Simple cli tool for translating ebooks in EPUB format into any language."
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/epub-translate"
repository = "https://github.com/SpaceShaman/epub-translate"
keywords = ["epub", "ebook", "translate", "cli", "translation", "translator"]

[tool.poetry.dependencies]
python = ">=3.8.5,<4.0.0"
ebooklib = "^0.19"
openai = "^1.82.0"
tqdm = "^4.67.1"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
epub-translate = "epub_translate.cli:app"